Fix no wrap THE ASSOCIATION BEHIND HACKUPC

--- a/src/styles/sections/about-us.scss
+++ b/src/styles/sections/about-us.scss
@@ -6,6 +6,14 @@
   margin: 3rem 0;
   font-weight: 600;
 }
+@media only screen and (max-width: 27.5rem) {
+  .section--about-us .section__title {
+    font-size: calc(1rem + 4vw);
+  }
+  .about-us__subtitle {
+    font-size: 1.125rem;
+  }
+}
 .about-us__layout {
   margin-top: 2rem;
   display: grid;
